# cinnabar

./: .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  rever.xsh  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  mypy.yaml
arsenic/: __init__.py  __init__.py~  _version.py  arsenic.py  network.py  plotlying.py  plotting.py  stats.py  wrangle.py
arsenic/examples/: Untitled.ipynb  WhyNotToUseR2ForDDG.ipynb  first-example.ipynb  plotly_example.ipynb
arsenic/tests/: conftest.py  test_import.py  test_stats.py
beryllium/: __init__.py  beryl.py  plotting.py  stats.py  wrangle.py
beryllium/examples/: first-example.ipynb  plotly_example.ipynb
beryllium/tests/: test_freeenergyframework.py
cinnabar/: __init__.py  _due.py  _version.py  arsenic.py  classification_metric.py  classification_metrics.py  cli.py  compare.py  conversion.py  estimators.py  femap.py  measurements.py  network.py  plotlying.py  plotting.py  stats.py  wrangle.py
cinnabar/data/: README.md  computational_data.csv  example.csv  experimental_data.csv
cinnabar/estimators/: __init__.py  base.py  mle.py
cinnabar/tests/: conftest.py  test_classification_metrics.py  test_cli.py  test_compare.py  test_conversion.py  test_due.py  test_estimators.py  test_femap.py  test_from_experiment.py  test_import.py  test_measurements.py  test_plotlying.py  test_plotting.py  test_stats.py  test_wrangle.py
devtools/: README.md
devtools/conda-envs/: env.yaml  test_env.yaml
devtools/scripts/: create_conda_env.py
devtools/travis-ci/: before_install.sh
docs/: CHANGELOG.rst  Makefile  README.md  api.rst  changelog.rst  conf.py  environment.yaml  getting_started.rst  index.rst  installation.rst  make.bat
docs/concepts/: estimators.rst  femap.rst  index.rst  plotting.rst
docs/tutorials/: calculating-metrics.ipynb  cinnabar-api.ipynb  compute-dg-api.ipynb  custom-estimator.ipynb  cycle-closure.ipynb  ecdf-plots.ipynb  index.rst  plotting-api.ipynb  results_comparison.ipynb
examples/: Untitled.ipynb  WhyNotToUseR2ForDDG.ipynb  calculating-metrics.ipynb  cinnabar-api.ipynb  compute-dg-api.ipynb  custom-estimator.ipynb  cycle-closure.ipynb  ecdf-plots.ipynb  example_notebook_cinnabar.ipynb  first-example.ipynb  plotting-api.ipynb  results_comparison.ipynb
freeenergyframework/: __init__.py  _version.py  absolute.py  example.ipynb  fef.py  plotlying.py  plotting.py  read.py  stats.py  wrangle.py
freeenergyframework/data/: example.csv
freeenergyframework/data/Ptp1b/: Ptp1b-perses-off-100.csv  Ptp1b-perses-smirnoff99Frosst.csv
freeenergyframework/data/Thrombin/: Thrombin-perses-gaff181.csv  Thrombin-perses-gaff211.csv  Thrombin-perses-off-100.csv  Thrombin-perses-smirnoff99Frosst.csv
freeenergyframework/examples/: Untitled.ipynb  WhyNotToUseR2ForDDG.ipynb  first-example.ipynb  plotly_example.ipynb
freeenergyframework/tests/: test_freeenergyframework.py
news/: TEMPLATE.rst  add_pi.rst  align_dataframes.rst  arsenic_update.rst  custom_estimators.rst  cycle_closure.rst  ecdf_docs.rst  ecdf_error.rst  ecdf_plots.rst  expose_stats.rst  fraction_of_best.rst  highlight_edges.rst  master_plotdep.rst  pairwise_df.rst  pic50_dataframes.rst  pic50_plots.rst  plotting_api_update.rst  results_ranking.rst  stats_mle_move.rst  svd_error.rst  svd_padding.rst  unit_conversions.rst
openff/arsenic/: __init__.py  arsenic.py  plotlying.py  plotting.py  stats.py  wrangle.py
openff/arsenic/examples/: first-example.ipynb
openff/arsenic/tests/: test_freeenergyframework.py  test_stats.py
paper/: paper.md
