# Helper file to handle all configs

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit generated versioneer
    arsenic/_version.py
branch = True

[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 119

[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440
versionfile_source = arsenic/_version.py
versionfile_build = arsenic/_version.py
tag_prefix = ''
parentdir_prefix = arsenic-

[aliases]
test = pytest

include_package_data = True

[options.package_data]
arsenic = "./arsenic/data/example.csv"